; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_cinematics.c_UI_CinematicsMenu_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_cinematics.c_UI_CinematicsMenu_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@cinematicsMenuInfo = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UI_CinematicsMenu_f() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @UI_Argv(i32 1)
  %3 = call i32 @atoi(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = call i32 (...) @UI_CinematicsMenu()
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cinematicsMenuInfo, i32 0, i32 0, i32 0), align 8
  %6 = load i32, i32* %1, align 4
  %7 = add nsw i32 %6, 3
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %5, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @Menu_SetCursorToItem(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cinematicsMenuInfo, i32 0, i32 0), i32 %10)
  ret void
}

declare dso_local i32 @atoi(i32) #1

declare dso_local i32 @UI_Argv(i32) #1

declare dso_local i32 @UI_CinematicsMenu(...) #1

declare dso_local i32 @Menu_SetCursorToItem(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
